Небольшая защита от XSS
...и другие менее интересные вещи

--- a/options.html
+++ b/options.html
@@ -2,7 +2,7 @@
 <html><head>
 	<meta charset="utf-8">
 	<title>Asian Wave &ndash; Настройки</title>
-	<link rel="stylesheet" href="/code/css/options.min.css">
+	<link rel="stylesheet" href="code/css/options.min.css">
 </head><body>
 	<table>
 		<tr>
